# fake-bl-manager

./: .gitignore  .gitmodules  README.md  README_zh.md
.github/workflows/: build-gbl-chainload.yml
DATABASE/: devices.json  rollback_index.csv
MAGISK_MODULE/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh  update.json
MAGISK_MODULE/webroot/: README.md  downgrade.html  index.html  install.html
PC_TOOL/: capture_logs_after_flash.bat  fake-bl-manager.py  flash_and_test_popsicle.bat.disabled
TWRP_INSTALLER/: install.sh  updater-script
TWRP_INSTALLER/scripts/: abl_downgrade.sh  backup_all.sh  check_abl_version.sh  check_rollback.sh  detect_gbl.sh  install_safe.sh  verify_install.sh
gbl-chainload/: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
gbl-chainload/GblChainloadPkg/: GblChainloadPkg.dec  GblChainloadPkg.dsc
gbl-chainload/GblChainloadPkg/Application/GblChainload/: BootFlow.c  Entry.c  GblChainload.inf  Stubs.c
gbl-chainload/crates/avb-parse/: Cargo.toml
gbl-chainload/crates/avb-parse/include/: avb_parse_ffi.h
gbl-chainload/crates/avb-parse/src/: ffi.rs  lib.rs
gbl-chainload/crates/avb-parse/tests/: parity.rs
gbl-chainload/crates/gblp1/: Cargo.toml
gbl-chainload/crates/gblp1/include/: gblp1_ffi.h
gbl-chainload/crates/gblp1/src/: ffi.rs  lib.rs
gbl-chainload/crates/gblp1/tests/: parity.rs
gbl-chainload/crates/mode2-profile-core/: Cargo.toml
gbl-chainload/crates/mode2-profile-core/include/: mode2_profile_ffi.h
gbl-chainload/crates/mode2-profile-core/src/: ffi.rs  lib.rs
gbl-chainload/crates/mode2-profile-core/tests/: parity.rs
gbl-chainload/crates/patch-engine/: Cargo.toml
gbl-chainload/crates/patch-engine/include/: patch_engine_ffi.h
gbl-chainload/crates/patch-engine/src/: ffi.rs  lib.rs
gbl-chainload/crates/patch-engine/src/abl_permissive/: fastboot_lock_gates.rs  libavb_force_success.rs  mod.rs
gbl-chainload/crates/patch-engine/src/internal/: arm64_decode.rs  encode.rs  mod.rs  pe_sections.rs  scan.rs
gbl-chainload/crates/patch-engine/src/oem/: mod.rs
gbl-chainload/crates/patch-engine/src/oem/oplus/: bypass_warning.rs  mod.rs
gbl-chainload/crates/patch-engine/src/oem/xiaomi/: bypass_warning.rs  mod.rs
gbl-chainload/crates/patch-engine/src/retired/: block_efisp_recursion.rs  mod.rs
gbl-chainload/crates/patch-engine/tests/: parity.rs
gbl-chainload/crates/pe-utils/: Cargo.toml
gbl-chainload/crates/pe-utils/src/: ffi.rs  lib.rs
gbl-chainload/crates/pe-utils/tests/: parity.rs
gbl-chainload/docker/: Dockerfile
gbl-chainload/docs/porting/: xiaomi-popsicle-porting-report.md
gbl-chainload/docs/project/: README.md  current-state.md  decisions.md  next-milestone.md  recovery-install-validation.md
gbl-chainload/docs/superpowers/plans/: 2026-05-15-on-device-payload-insertion.md  2026-05-17-zip-graft-mode.md  2026-05-18-mode-2-efi-runtime.md  2026-05-18-mode-2-efi-runtime.md.tasks.json  2026-05-22-engine-rework.md  2026-05-22-engine-rework.md.tasks.json  2026-05-23-release-confidence-and-parity-cleanup.md  2026-05-23-release-confidence-and-parity-cleanup.md.tasks.json
gbl-chainload/docs/superpowers/pr-evidence/: 2026-05-23-rust-consolidation-parity.md
gbl-chainload/docs/superpowers/specs/: 2026-05-15-on-device-payload-insertion-design.md  2026-05-17-zip-graft-mode-design.md  2026-05-22-engine-rework-and-rust-consolidation-design.md  2026-05-22-engine-rework-design.md  2026-05-22-rust-tooling-consolidation-design.md  2026-05-23-release-confidence-and-parity-cleanup-design.md
gbl-chainload/scripts/: build-cross-tools.sh  build-inside-docker.sh  build-recovery-tools.sh  build.sh  device-monitor.sh  efisp-package.py  extract-pe-from-fv.sh  make-mode2-test-overlay.sh  release.sh  test-device-automatic.sh  vbmeta-graft.py
gbl-chainload/tests/: 010_build_smoke.sh  042_dynamic_patch_harness.sh  045_mode_taxonomy_lint.sh  046_mode1_protocol_hook_lint.sh  047_cleanup_lint.sh  051_gbl_root_canoe_regression.sh  052_log_minimal.sh  runall.sh
gbl-chainload/tests/avb/: Makefile  test_avbparse.c
gbl-chainload/tests/host/: 060_pack_roundtrip.sh  061_parser_fuzz.sh  063_pe_sanity.sh  064_e2e_fixtures.sh  065_patch_sig_parity.sh  066_dd_commit_atomic.sh  067_blockio_reader_smoke.sh  068_config_table_override.sh  069_full_buffer_scan.sh  070_crypto_conformance.sh  072_fv_unwrap_exploit.sh  073_install_assembly.sh  074_vbmeta_graft.sh  075_graft_assembly.sh  076_mode2_profile_parse.sh  077_gblp1_find_mode2_profile.sh  078_profile_rewrite.sh  079_mode2_profile_derive.sh  080_mode2_profile_compile.sh  081_gbl_pack_mode2_profile.sh  082_mode2_profile_parity.sh  083_abl_patcher_oem.sh  084_cross_build.sh  085_efisp_package.sh  086_diag_dryrun.sh  087_mode2_profile_regression.sh  088_patch7_multi_abl.sh  089_gblp1_inspect.sh  090_vbmeta_descriptor_hash.sh  091_vbmeta_graft_py.sh  093_manifest_parse.sh  094_gbl_pack_manifest.sh  096_recovery_graft_real.sh  Makefile
gbl-chainload/tests/host/fixtures/: .gitignore
gbl-chainload/tests/host/helpers/: Makefile  diag_fake_byname.sh  inject_efisp.c  locate_overlay_host.c  mode2_harness.c  parser_harness.c  poison_byte.c  test_crc32.c  test_efisp_scan.c  test_manifest_parse.c  test_pe_sanity.c  test_sha256.c
gbl-chainload/tests/images/: README.md
gbl-chainload/tools/: README.md  RELEASE_README.md
gbl-chainload/tools/gbl/: Cargo.toml
gbl-chainload/tools/gbl/src/: main.rs
gbl-chainload/tools/gbl/src/commands/: avb.rs  commit.rs  inspect.rs  mod.rs  mode2.rs  pack.rs  patch.rs  unwrap.rs
gbl-chainload/tools/shared/: gbl_staged_buffer.h
targets/toolkit_android/: Makefile
targets/toolkit_android/resources/: build.sh
